
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;


 int be64dec (unsigned char const*) ;

__attribute__((used)) static void
be64dec_vect(uint64_t *dst, const unsigned char *src, size_t len)
{
 size_t i;

 for (i = 0; i < len / 8; i++)
  dst[i] = be64dec(src + i * 8);
}
